wk_taa_taaqa/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>AMS_Account_Number__c</fullName>
        <label>AMS Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( Lead.IsConverted = TRUE ,  Lead.ConvertedDate -  Load_Date__c ,
IF( TEXT( Lead.Status ) = &quot;Unqualified&quot; , NULL , TODAY() - Load_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CampaignMemberLeadId__c</fullName>
        <description>Captures Campaign Member Lead Id</description>
        <formula>CASESAFEID(LeadId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignMemberLeadId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrCampaign_Comment__c</fullName>
        <formula>Lead.Campaign_Comment_del__c
+Contact.Campaign_Comment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrCampaign Comment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies campaign members that were created temporarily and should be excluded from reporting</description>
        <inlineHelpText>Identifies campaign members that were created temporarily and should be excluded from reporting</inlineHelpText>
        <label>Exclude From Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_CM_Lead_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark a Campaign Member as being processed by the Lead Creation process</description>
        <label>Is CM Lead Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Latest_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Latest Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Company_Name__c</fullName>
        <formula>Lead.Company</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Detail_Link__c</fullName>
        <formula>&quot;https://na25.salesforce.com/&quot;+LeadId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Detail Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_First_Name__c</fullName>
        <formula>Lead.Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL_Rating__c</fullName>
        <formula>If (ISPICKVAL(Status, &quot;Contact-Me&quot;), &quot;HOT&quot;,
IF (ISPICKVAL(Status, &quot;View-Recording&quot;), &quot;WARM&quot;,
IF (ISPICKVAL(Status, &quot;Considering&quot;), &quot;WARM&quot;, 
NULL)))</formula>
        <label>MQL Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>CCH AutoFlow</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Document</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Portal</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Practice</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Tax</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Workstream</fullName>
                </value>
                <value>
                    <fullName>CCH eSign/Bundles</fullName>
                </value>
                <value>
                    <fullName>CCH Knowledge Tools</fullName>
                </value>
                <value>
                    <fullName>CCH Sales Tax Office v4.0 Upgrade</fullName>
                </value>
                <value>
                    <fullName>CCH Site Builder</fullName>
                </value>
                <value>
                    <fullName>Pfx ActiveData</fullName>
                </value>
                <value>
                    <fullName>Pfx Document</fullName>
                </value>
                <value>
                    <fullName>Pfx Engagement/Workpaper Manager</fullName>
                </value>
                <value>
                    <fullName>Pfx Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Pfx Knowledge Coach</fullName>
                </value>
                <value>
                    <fullName>Pfx Outsource</fullName>
                </value>
                <value>
                    <fullName>Pfx PDFlyer</fullName>
                </value>
                <value>
                    <fullName>Pfx Practice Management</fullName>
                </value>
                <value>
                    <fullName>Pfx Scan</fullName>
                </value>
                <value>
                    <fullName>Pfx Tax</fullName>
                </value>
                <value>
                    <fullName>Professional and Client Services</fullName>
                </value>
                <value>
                    <fullName>Rates &amp; Taxability Databases</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Learning</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Use Tax Calculation (On-Premise)</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Use Tax Calculation (SaaS)</fullName>
                </value>
                <value>
                    <fullName>Sales Tax Compliance (Returns)</fullName>
                </value>
                <value>
                    <fullName>Training &amp; Consulting/Professional Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Alignment__c</fullName>
        <description>Populated from the Contact Sales Alignment field.</description>
        <label>Sales Alignment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <label>Submitted By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>e_Book_Requested__c</fullName>
        <inlineHelpText>Used only for the R&amp;L Prospect Campaign.</inlineHelpText>
        <label>e-Book Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Master Tax Guide</fullName>
                </value>
                <value>
                    <fullName>US Master GAAP Guide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>